--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.sunny</groupId>
     <artifactId>sunny-doodle</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>google-thirdPart-login</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
